# pico_plant

./: .gitignore  CMakeLists.txt  Cargo.toml  memory.x
.cargo/: config
src/: main.c  main.rs
